// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zwe-install (LONG) install, re-install and fail, overwrite and succeed abc 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWEAUTH already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWEEXEC already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWELOAD already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWESAMP already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
-------------------------------------------------------------------------------
>> Zowe MVS data sets installation skipped."
`;

exports[`zwe-install (LONG) install, re-install and fail, overwrite and succeed abc 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWEAUTH already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWEEXEC already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWELOAD already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWESAMP already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
-------------------------------------------------------------------------------
>> Zowe MVS data sets installation skipped."
`;

exports[`zwe-install (LONG) install, re-install and fail, overwrite and succeed abc 3`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWEAUTH already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWEEXEC already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWELOAD already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.INST.TEST.SZWESAMP already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
-------------------------------------------------------------------------------
>> Zowe MVS data sets installation skipped."
`;

exports[`zwe-install (LONG) install, re-install and fail, overwrite and succeed abc 4`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
Warning ZWEL0300W: TEST.DATASET.PFX.INST.TEST.SZWEAUTH already exists. Members in this data set will be overwritten.
Warning ZWEL0300W: TEST.DATASET.PFX.INST.TEST.SZWEEXEC already exists. Members in this data set will be overwritten.
Warning ZWEL0300W: TEST.DATASET.PFX.INST.TEST.SZWELOAD already exists. Members in this data set will be overwritten.
Warning ZWEL0300W: TEST.DATASET.PFX.INST.TEST.SZWESAMP already exists. Members in this data set will be overwritten.
Template JCL: /test/dir/files/SZWESAMP/ZWEINSTL
--- JCL content ---
//ZWEINSTL JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to create the MVS data sets under the
//* zowe.setup.dataset.prefix definition:
//*   - SZWEAUTH - Zowe load modules (++PROGRAM)
//*   - SZWESAMP - sample configurations
//*   - SZWEEXEC - utilities used by Zowe
//*   - SZWELOAD - config manager for REXX
//*
//* The following step will copy required members.
//*
//*********************************************************************
//MKPDSE EXEC PGM=IKJEFT01,DYNAMNBR=4
//SYSTSPRT DD SYSOUT=A
//SYSTSIN DD *
ALLOC NEW DA('TEST.DATASET.PFX.INST.TEST.SZWESAMP') +
dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
unit(sysallda) space(30,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.INST.TEST.SZWEEXEC') +
dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
unit(sysallda) space(15,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.INST.TEST.SZWEAUTH') +
dsntype(library) dsorg(po) recfm(u) lrecl(0) +
blksize(32760) unit(sysallda) space(195,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.INST.TEST.SZWELOAD') +
dsntype(library) dsorg(po) recfm(u) lrecl(0) +
blksize(32760) unit(sysallda) space(150,15) tracks
//*
//*
//AUTHCPY EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
ZWE_TMP_PREFIX='TEST.DATASET.PFX.INST.TEST' &&
cd files/SZWESAMP &&
cp * "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../SZWEEXEC &&
cp * "//'$ZWE_TMP_PREFIX.SZWEEXEC'" &&
cd ../SZWELOAD &&
cp * "//'$ZWE_TMP_PREFIX.SZWELOAD'" &&
cd ../../components/launcher/bin &&
cp zowe_launcher
   "//'$ZWE_TMP_PREFIX.SZWEAUTH(ZWELNCH)'" &&
cd ../samplib/ &&
cp * "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../../zss/SAMPLIB &&
cp ZWESASTC ZWESIP00 ZWESISCH ZWESISTC
   "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../LOADLIB &&
cp * "//'$ZWE_TMP_PREFIX.SZWEAUTH'"
/*
--- End of JCL ---
Deleting existing datasets.
Submitting Job ZWEINSTL
Job ZWEINSTL(JOB00000) completed with RC=2
Zowe JCL submitted with errors, check job log. Job completion code=256, Job completion text=COMPLETED"
`;

exports[`zwe-install (SHORT) zwe install --dry-run valid ds names 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
Warning ZWEL0301W: TEST.DATASET.PFX.SZWEEXEC already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.SZWELOAD already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Warning ZWEL0301W: TEST.DATASET.PFX.SZWESAMP already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
-------------------------------------------------------------------------------
>> Zowe MVS data sets installation skipped."
`;

exports[`zwe-install (SHORT) zwe install --dry-run valid ds names 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
Warning ZWEL0300W: TEST.DATASET.PFX.SZWEEXEC already exists. Members in this data set will be overwritten.
Warning ZWEL0300W: TEST.DATASET.PFX.SZWELOAD already exists. Members in this data set will be overwritten.
Warning ZWEL0300W: TEST.DATASET.PFX.SZWESAMP already exists. Members in this data set will be overwritten.
Template JCL: /test/dir/files/SZWESAMP/ZWEINSTL
--- JCL content ---
//ZWEINSTL JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to create the MVS data sets under the
//* zowe.setup.dataset.prefix definition:
//*   - SZWEAUTH - Zowe load modules (++PROGRAM)
//*   - SZWESAMP - sample configurations
//*   - SZWEEXEC - utilities used by Zowe
//*   - SZWELOAD - config manager for REXX
//*
//* The following step will copy required members.
//*
//*********************************************************************
//MKPDSE EXEC PGM=IKJEFT01,DYNAMNBR=4
//SYSTSPRT DD SYSOUT=A
//SYSTSIN DD *
ALLOC NEW DA('TEST.DATASET.PFX.SZWESAMP') +
dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
unit(sysallda) space(30,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.SZWEEXEC') +
dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
unit(sysallda) space(15,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.SZWEAUTH') +
dsntype(library) dsorg(po) recfm(u) lrecl(0) +
blksize(32760) unit(sysallda) space(195,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.SZWELOAD') +
dsntype(library) dsorg(po) recfm(u) lrecl(0) +
blksize(32760) unit(sysallda) space(150,15) tracks
//*
//*
//AUTHCPY EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
ZWE_TMP_PREFIX='TEST.DATASET.PFX' &&
cd files/SZWESAMP &&
cp * "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../SZWEEXEC &&
cp * "//'$ZWE_TMP_PREFIX.SZWEEXEC'" &&
cd ../SZWELOAD &&
cp * "//'$ZWE_TMP_PREFIX.SZWELOAD'" &&
cd ../../components/launcher/bin &&
cp zowe_launcher
   "//'$ZWE_TMP_PREFIX.SZWEAUTH(ZWELNCH)'" &&
cd ../samplib/ &&
cp * "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../../zss/SAMPLIB &&
cp ZWESASTC ZWESIP00 ZWESISCH ZWESISTC
   "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../LOADLIB &&
cp * "//'$ZWE_TMP_PREFIX.SZWEAUTH'"
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`zwe-install (SHORT) zwe install --dry-run valid ds names 3`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
Template JCL: /test/dir/files/SZWESAMP/ZWEINSTL
--- JCL content ---
//ZWEINSTL JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to create the MVS data sets under the
//* zowe.setup.dataset.prefix definition:
//*   - SZWEAUTH - Zowe load modules (++PROGRAM)
//*   - SZWESAMP - sample configurations
//*   - SZWEEXEC - utilities used by Zowe
//*   - SZWELOAD - config manager for REXX
//*
//* The following step will copy required members.
//*
//*********************************************************************
//MKPDSE EXEC PGM=IKJEFT01,DYNAMNBR=4
//SYSTSPRT DD SYSOUT=A
//SYSTSIN DD *
ALLOC NEW DA('TEST.DATASET.PFX.NEW.SZWESAMP') +
dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
unit(sysallda) space(30,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.NEW.SZWEEXEC') +
dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
unit(sysallda) space(15,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.NEW.SZWEAUTH') +
dsntype(library) dsorg(po) recfm(u) lrecl(0) +
blksize(32760) unit(sysallda) space(195,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.NEW.SZWELOAD') +
dsntype(library) dsorg(po) recfm(u) lrecl(0) +
blksize(32760) unit(sysallda) space(150,15) tracks
//*
//*
//AUTHCPY EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
ZWE_TMP_PREFIX='TEST.DATASET.PFX.NEW' &&
cd files/SZWESAMP &&
cp * "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../SZWEEXEC &&
cp * "//'$ZWE_TMP_PREFIX.SZWEEXEC'" &&
cd ../SZWELOAD &&
cp * "//'$ZWE_TMP_PREFIX.SZWELOAD'" &&
cd ../../components/launcher/bin &&
cp zowe_launcher
   "//'$ZWE_TMP_PREFIX.SZWEAUTH(ZWELNCH)'" &&
cd ../samplib/ &&
cp * "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../../zss/SAMPLIB &&
cp ZWESASTC ZWESIP00 ZWESISCH ZWESISTC
   "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../LOADLIB &&
cp * "//'$ZWE_TMP_PREFIX.SZWEAUTH'"
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`zwe-install (SHORT) zwe install --dry-run valid ds names 4`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
Template JCL: /test/dir/files/SZWESAMP/ZWEINSTL
--- JCL content ---
//ZWEINSTL JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is used to create the MVS data sets under the
//* zowe.setup.dataset.prefix definition:
//*   - SZWEAUTH - Zowe load modules (++PROGRAM)
//*   - SZWESAMP - sample configurations
//*   - SZWEEXEC - utilities used by Zowe
//*   - SZWELOAD - config manager for REXX
//*
//* The following step will copy required members.
//*
//*********************************************************************
//MKPDSE EXEC PGM=IKJEFT01,DYNAMNBR=4
//SYSTSPRT DD SYSOUT=A
//SYSTSIN DD *
ALLOC NEW DA('TEST.DATASET.PFX.NEW.SZWESAMP') +
dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
unit(sysallda) space(30,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.NEW.SZWEEXEC') +
dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
unit(sysallda) space(15,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.NEW.SZWEAUTH') +
dsntype(library) dsorg(po) recfm(u) lrecl(0) +
blksize(32760) unit(sysallda) space(195,15) tracks
ALLOC NEW DA('TEST.DATASET.PFX.NEW.SZWELOAD') +
dsntype(library) dsorg(po) recfm(u) lrecl(0) +
blksize(32760) unit(sysallda) space(150,15) tracks
//*
//*
//AUTHCPY EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
ZWE_TMP_PREFIX='TEST.DATASET.PFX.NEW' &&
cd files/SZWESAMP &&
cp * "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../SZWEEXEC &&
cp * "//'$ZWE_TMP_PREFIX.SZWEEXEC'" &&
cd ../SZWELOAD &&
cp * "//'$ZWE_TMP_PREFIX.SZWELOAD'" &&
cd ../../components/launcher/bin &&
cp zowe_launcher
   "//'$ZWE_TMP_PREFIX.SZWEAUTH(ZWELNCH)'" &&
cd ../samplib/ &&
cp * "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../../zss/SAMPLIB &&
cp ZWESASTC ZWESIP00 ZWESISCH ZWESISTC
   "//'$ZWE_TMP_PREFIX.SZWESAMP'" &&
cd ../LOADLIB &&
cp * "//'$ZWE_TMP_PREFIX.SZWEAUTH'"
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`zwe-install (SHORT) zwe install invalid config 1`] = `
"Error: Could not load config for FILE(/not/real/config.yml):FILE(/test/dir/files/defaults.yaml), status=7
ZWEL0318E - failed to read '/not/real/config.yml' - EDC5129I No such file or directory. (errno2=0x0594003D)"
`;

exports[`zwe-install (SHORT) zwe install invalid dataset name 1`] = `
"Error: Validation of FILE(/test/dir/zowe.test.yaml):FILE(/test/dir/files/defaults.yaml) against schema /test/dir/schemas/zowe-yaml-schema.json:/test/dir/schemas/server-common.json found invalid JSON Schema data
Validity Exceptions(s) with object at
  Validity Exceptions(s) with object at /zowe
    Validity Exceptions(s) with object at /zowe/setup
      Validity Exceptions(s) with object at /zowe/setup/dataset
        Validity Exceptions(s) with string at /zowe/setup/dataset/prefix
          string pattern match fail s='INVALID.DSN.LENGTH123123', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}(\\.([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}){0,11}$', at /zowe/setup/dataset/prefix"
`;

exports[`zwe-install (SHORT) zwe install invalid dataset name 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
ERROR: Error ZWEL0157E: Zowe dataset prefix (zowe.setup.dataset.prefix) is not defined in Zowe YAML configuration file."
`;

exports[`zwe-install (SHORT) zwe install invalid parameter 1`] = `"Error ZWEL0102E: Invalid parameter --ds-prefix"`;

exports[`zwe-install (SHORT) zwe install invalid runtime directory 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
ERROR: Error ZWEL0105E: The Zowe YAML config file is associated to Zowe runtime "/", which is not same as where zwe command is located "/test/dir"."
`;

exports[`zwe-install (SHORT) zwe install invalid runtime directory 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> Install Zowe MVS data sets
ERROR: Could not convert /not/a/real/path to absolute path, err=129
ERROR: Error ZWEL0105E: The Zowe YAML config file is associated to Zowe runtime "undefined", which is not same as where zwe command is located "/test/dir"."
`;
